# grocy

./: configuration.yaml  pyproject.toml
config/: configuration.yaml
custom_components/grocy/: __init__.py  config_flow.py  const.py  coordinator.py  grocy_data.py  helpers.py  manifest.json  sensor.py  services.py  todo.py
